log
Sat Mar 12 16:15:55 HSP 2022: 
 exercises.c | 36 +++++++++++++++++++++++++++++-------
 1 file changed, 29 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:16:12: error: 'return' with a value, in function returning void [-Werror]
     return 0;
            ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c: In function 'crearPersona':
exercises.c:68:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &people;
           ^~~~~~~
exercises.c: In function 'sumaV':
exercises.c:120:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c->datos = largoDatos;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
f03e19a
Sat Mar 12 16:19:18 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:16:12: error: 'return' with a value, in function returning void [-Werror]
     return 0;
            ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c: In function 'crearPersona':
exercises.c:68:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &people;
           ^~~~~~~
exercises.c: In function 'sumaV':
exercises.c:120:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c->datos = largoDatos;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
e05bd2a
Sat Mar 12 16:19:49 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:69:4: error: expected ';' before 'return'
    return ptrPeople;
    ^~~~~~
exercises.c:64:13: error: variable 'ptrPeople' set but not used [-Werror=unused-but-set-variable]
    Persona *ptrPeople;
             ^~~~~~~~~
exercises.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
240d7a1
Sat Mar 12 16:20:30 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
04731bb
Sat Mar 12 16:32:31 HSP 2022: 
 exercises.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:69:11: error: function returns address of local variable [-Werror=return-local-addr]
    return &people;
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
764e3d4
Sat Mar 12 16:33:24 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:69:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return &ptrPeople;
           ^~~~~~~~~~
exercises.c:69:11: error: function returns address of local variable [-Werror=return-local-addr]
cc1.exe: all warnings being treated as errors
Compilation failed
5bb574b
Sat Mar 12 16:33:35 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
0444cef
Sat Mar 12 16:35:07 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
0b25d8e
Sat Mar 12 16:37:02 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
17aa97a
Sat Mar 12 16:37:36 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
adb6ff1
Sat Mar 12 16:38:57 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
815571d
Sat Mar 12 16:42:44 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f1e7115
Sat Mar 12 16:43:42 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:68:15: error: 'ptrPeople' is used uninitialized in this function [-Werror=uninitialized]
    *ptrPeople = people;
    ~~~~~~~~~~~^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
609e3ba
Sat Mar 12 16:44:06 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
b2242a1
Sat Mar 12 16:46:16 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
7e9dae4
Sat Mar 12 16:47:47 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
dc825d7
Sat Mar 12 16:50:14 HSP 2022: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 40/70
8d96923
